# 3semCPP

week01/project/: CMakeLists.txt  main.cpp
week01/project/include/: ans_handler.hpp  my_math.hpp
week01/project/src/: ans_handler.cpp  my_math.cpp
